# BaseVarC

./: .gitmodules  CMakeLists.txt  CmakeLists.txt  Makefile.am  Makefile.in  README.md  configure  configure.ac
include/: BaseVarUtils.h  ThreadPool.h
src/: 00.bam.pos  100.bam.lst  Algorithm.cpp  Algorithm.h  BamProcess.cpp  BamProcess.h  BaseType.cpp  BaseType.h  BaseVarC.cpp  BaseVarUtils.h  CMakeLists.txt  CmakeLists.txt  FastaReader.h  Makefile.am  Makefile.in  RefReader.h  Stats.h  ThreadPool.h  a.cpp  a.out  algorithm.c  algorithm.h  bam.lst  chr17.40151042.45151043.pos.txt  chr17.pos.txt  em.c  em.h  kfunc.c  pos.txt  pos.vcf  ranksum.c  ranksum.h  t  t.cpp  t1  test.cpp
test/: 100.bam.lst  a.out  bam.list  pos.txt  str.cpp  test.sh
test/data/: chr17.fa.gz.fai  chr17.fa.gz.gzi
